--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,6 +3,8 @@ target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+.env
+src/main/resources/application.yaml
 
 ### STS ###
 .apt_generated
