--- a/backend/src/main/resources/application.yaml.example
+++ b/backend/src/main/resources/application.yaml.example
@@ -12,4 +12,8 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+
+    flyway:
+      enabled: true
+      locations: classpath:db/migration
+      baseline-on-migrate: true
