--- a/backend/src/main/resources/application.yaml.example
+++ b/backend/src/main/resources/application.yaml.example
@@ -4,8 +4,8 @@ spring:
 
   datasource:
     url: jdbc:postgresql://localhost:5432/nucleus_pass
-    username: username
-    password: password
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
   jpa:
@@ -17,3 +17,7 @@ spring:
       enabled: true
       locations: classpath:db/migration
       baseline-on-migrate: true
+
+    jwt:
+      secret: ${JWT_SECRET}
+      expirationMs: ${JWT_EXPIRATION}
