--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -1,4 +1,4 @@
-name: nucleus_pass
+name: nucleus
 description: "A password manager app for securely sharing and managing credentials—both privately and within teams, families or friends."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
